--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Nopea kirjastohaku (helmet).
+Nopea Helmet-kirjastohaku.
+Haku tekijöiden, nimen tai isbn:n perusteella.
+
+Käyttää tietolähteenä data.kirjastot.fi.apia.
